# 3Dprog24

./: 3Dprog24.cpp  3Dprog24.h  CMakeLists.txt  CMakePresets.json  Camera.h  README.md  Shader.cpp  Shader.h  glad.c
Assets/Models/CollisionTest/: CollisionTest.blend  CollisionTest.blend1  CollisionTest.fbx
Assets/Models/Cubes/: Cubes.blend
Assets/Models/Roulette/: Roulette.fbx
Assets/Models/Stone/: stone.blend  stone.blend1  stone.dae  stone.fbx  stone.glb  stone.mtl  wgprbiq.json  wgprbiq_LOD0.fbx
Assets/Models/StoneScene/: StoneScene.fbx  stonescene.blend
assets/models/megascansStone/: megascansStone.blend
assets/models/sceneHierarchy/: sceneHierarchy.fbx
assets/shaders/: shader.fs
core/: 3Dprog24.cpp  AABB.h  Actor.cpp  Actor.h  ActorController.cpp  ActorController.h  Application.cpp  Application.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Collision.h  Component.h  Controller.h  Defines.h  Logger.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PhysicsComponent.cpp  PhysicsComponent.h  Renderer.h  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Tag.h  Texture.cpp  Texture.h  Transform.h  Types.h  Vertex.h  Window.cpp  Window.h
core/Camera/: Camera.cpp  CameraController.cpp  CameraController.h
core/Collision/: AABB.h  Collision.h
core/Lights/: DirectionalLight.h  Lights.h  PointLight.h
core/ModelLoader/: AssimpLoader.cpp  AssimpLoader.h  AssimpUtility.h  FBXLoader.cpp  FBXLoader.h  Shared.h
core/Physics/: PhysicsComponent.cpp  PhysicsComponent.h
core/Skybox/: Skybox.cpp  Skybox.h
documentation/: Doxyfile
documentation/html/: 3_dprog24_8cpp.html  _a_a_b_b_8h.html  _a_a_b_b_8h_source.html  _actor_8cpp.html  _actor_8h.html  _actor_8h_source.html  _actor_controller_8cpp.html  _actor_controller_8h.html  _actor_controller_8h_source.html  _application_8cpp.html  _application_8h.html  _application_8h_source.html  _assimp_loader_8cpp.html  _assimp_loader_8h.html  _assimp_loader_8h_source.html  _assimp_utility_8h.html  _assimp_utility_8h_source.html  _camera_8cpp.html  _camera_8h.html  _camera_8h_source.html  _camera_controller_8cpp.html  _camera_controller_8h.html  _camera_controller_8h_source.html  _collision_8h.html  _collision_8h_source.html  _component_8h.html  _component_8h_source.html  _controller_8h.html  _controller_8h_source.html  _defines_8h.html  _defines_8h_source.html  _directional_light_8h.html  _directional_light_8h_source.html  _lights_8h.html  _lights_8h_source.html  _logger_8h.html  _logger_8h_source.html  _material_8cpp.html  _material_8h.html  _material_8h_source.html  (+178 more)
documentation/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enums_1.js  (+59 more)
documentation/latex/: 3_dprog24_8cpp.tex  _a_a_b_b_8h.tex  _a_a_b_b_8h_source.tex  _actor_8cpp.tex  _actor_8h.tex  _actor_8h_source.tex  _actor_controller_8cpp.tex  _actor_controller_8h.tex  _actor_controller_8h_source.tex  _application_8cpp.tex  _application_8h.tex  _application_8h_source.tex  _assimp_loader_8cpp.tex  _assimp_loader_8h.tex  _assimp_loader_8h_source.tex  _assimp_utility_8h.tex  _assimp_utility_8h_source.tex  _camera_8cpp.tex  _camera_8h.tex  _camera_8h_source.tex  _camera_controller_8cpp.tex  _camera_controller_8h.tex  _camera_controller_8h_source.tex  _collision_8h.tex  _collision_8h_source.tex  _component_8h.tex  _component_8h_source.tex  _controller_8h.tex  _controller_8h_source.tex  _defines_8h.tex  _defines_8h_source.tex  _directional_light_8h.tex  _directional_light_8h_source.tex  _lights_8h.tex  _lights_8h_source.tex  _logger_8h.tex  _logger_8h_source.tex  _material_8cpp.tex  _material_8h.tex  _material_8h_source.tex  (+102 more)
includes/glad/: glad.c  glad.h
includes/glad/glad/: glad.h
shaders/: shader.fs  shader.vs
